parsing/parser/src/tests/snapshots/snapshots__floats-3.snap
---
source: parsing/parser/tests/snapshots.rs
expression: expr
---
Float(
    Float {
        value: 5.0,
        info: SpanTokens(
            [
                SpanToken {
                    token: Float(
                        5.0,
                    ),
                    origin: "5e0",
                },
            ],
        ),
    },
)
